src/app/Album.module.css
.album {
  position: relative;
  display: flex;
  flex-direction: column;
  border: 0.5px solid #888;
  border-radius: 3px;
  color: black;
  background-color: rgb(250, 250, 250);
  padding: 20px;
  text-decoration: none;
  box-shadow: 0 0 0 rgba(0, 0, 0, 0);
  transition: all 0.25s;
}

.imageWrapper {
  position: relative;
  width: 100%;
  aspect-ratio: 1;
  margin-bottom: 10px;
  display: block;
}

.titleContainer {
  display: flex;
  flex-grow: 1;
  margin-bottom: 10px;
  gap: 12px;
}

.title {
  flex-grow: 1;
}

.rating {
  top: 6px;
  position: relative;
  border: 3px solid black;
  flex-basis: 50px;
  flex-shrink: 0;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  padding-top: 11.5px;
  line-height: 20px;
  font-size: 20px;
  font-weight: 800;
  text-align: center;
  font-family: system-ui, sans-serif;
}

.bestNew {
  border-color: rgb(222, 0, 0);
  color: rgb(222, 0, 0);
}

.artist {
  font-size: 20px;
  margin-bottom: 3px;
}

.name {
  font-weight: normal;
  font-style: italic;
}

/* .genreWrapper {
  margin-bottom: 50px;
} */

.genre {
  background: black;
  color: white;
  border-radius: 1rem;
  padding: 2px 7px;
  font-family: system-ui, sans-serif;
  font-size: 11px;
  text-transform: uppercase;
  font-weight: 500;
  letter-spacing: 0.3px;
  margin-right: 0.25rem;
}

.buttonContainer {
  /* border-top: 0.5px solid #888; */
  float: right;
  margin: 10px -20px -10px -20px;
  padding: 10px;
  padding-bottom: 0;
}

.button {
  background: none;
  border: none;
  font-size: 1rem;
  text-decoration: none;
  padding: 10px 20px;
  border-radius: 3px;
}

.button:hover {
  text-decoration: none;
  cursor: pointer;
  background-color: rgb(226, 226, 226);
}

